# vcpkg-port-tests

./: .gitignore  CMakeLists.txt  README.md  test.ps1  test_results.txt  testoutput.txt
cppunit/: CMakeLists.txt  main.cpp
gdal/: CMakeLists.txt  main.cpp
geos/: CMakeLists.txt  main.cpp
libgd/: CMakeLists.txt  main.c
podofo/: CMakeLists.txt  main.cpp
xalan-c/: CMakeLists.txt  main.cpp
xerces-c/: CMakeLists.txt
